tests/auto-gen/inputvalidation001/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of list. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:26:8--26:16
 22 | ------------------------------------
 23 | 
 24 | --- Non-Gen type ---
 25 | 
 26 | list : List Int
             ^^^^^^^^

Error: While processing right hand side of list'. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:29:17--29:25
 25 | 
 26 | list : List Int
 27 | list = deriveGen
 28 | 
 29 | list' : Fuel -> List Int
                      ^^^^^^^^

Error: While processing right hand side of y. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:32:5--32:17
 28 | 
 29 | list' : Fuel -> List Int
 30 | list' = deriveGen
 31 | 
 32 | y : Y Int String
          ^^^^^^^^^^^^

Error: While processing right hand side of y'. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:35:14--35:26
 31 | 
 32 | y : Y Int String
 33 | y = deriveGen
 34 | 
 35 | y' : Fuel -> Y Int String
                   ^^^^^^^^^^^^

Error: While processing right hand side of genY_noFuel_given. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:40:29--40:33
 36 | y' = deriveGen
 37 | 
 38 | --- No fuel argument ---
 39 | 
 40 | genY_noFuel_given : (a, b : Type) -> Gen $ Y a b
                                  ^^^^

Error: While processing right hand side of genY_noFuel_given'. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:43:22--43:25
 39 | 
 40 | genY_noFuel_given : (a, b : Type) -> Gen $ Y a b
 41 | genY_noFuel_given = deriveGen
 42 | 
 43 | genY_noFuel_given' : Int -> (a, b : Type) -> Gen $ Y a b
                           ^^^

Error: While processing right hand side of genY_noFuel_given''. Error during reflection: The first argument must be of type `Fuel`

ValidateInput:46:23--46:24
 42 | 
 43 | genY_noFuel_given' : Int -> (a, b : Type) -> Gen $ Y a b
 44 | genY_noFuel_given' = deriveGen
 45 | 
 46 | genY_noFuel_given'' : X -> (a, b : Type) -> Gen $ Y a b
                            ^

Error: While processing right hand side of genY_noFuel_mid. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:49:24--49:28
 45 | 
 46 | genY_noFuel_given'' : X -> (a, b : Type) -> Gen $ Y a b
 47 | genY_noFuel_given'' = deriveGen
 48 | 
 49 | genY_noFuel_mid : (b : Type) -> Gen (a ** Y a b)
                             ^^^^

Error: While processing right hand side of genY_noFuel_mid'. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:52:25--52:29
 48 | 
 49 | genY_noFuel_mid : (b : Type) -> Gen (a ** Y a b)
 50 | genY_noFuel_mid = deriveGen
 51 | 
 52 | genY_noFuel_mid' : (b : Type) -> Gen $ DPair {a = Type, p = \a => Y a b}
                              ^^^^

Error: While processing right hand side of genY_noFuel_gened. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:55:21--55:42
 51 | 
 52 | genY_noFuel_mid' : (b : Type) -> Gen $ DPair {a = Type, p = \a => Y a b}
 53 | genY_noFuel_mid' = deriveGen
 54 | 
 55 | genY_noFuel_gened : Gen (a ** b ** Y a b)
                          ^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genY_missplFuel_aft. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:60:31--60:35
 56 | genY_noFuel_gened = deriveGen
 57 | 
 58 | --- Misplaced fuel argument ---
 59 | 
 60 | genY_missplFuel_aft : (a, b : Type) -> Fuel -> Gen $ Y a b
                                    ^^^^

Error: While processing right hand side of genY_missplFuel_mid. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:63:28--63:32
 59 | 
 60 | genY_missplFuel_aft : (a, b : Type) -> Fuel -> Gen $ Y a b
 61 | genY_missplFuel_aft = deriveGen
 62 | 
 63 | genY_missplFuel_mid : (a : Type) -> Fuel -> (b : Type) -> Gen $ Y a b
                                 ^^^^

Error: While processing right hand side of genY_missplFuel_aft_imp. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:74:35--74:39
 70 | -- because even explicit setting type argument of `deriveGen` makes two signatures incompatible.
 71 | 
 72 | --- Misplaced + implicit fuel argument ---
 73 | 
 74 | genY_missplFuel_aft_imp : (a, b : Type) -> {_ : Fuel} -> Gen $ Y a b
                                        ^^^^

Error: While processing right hand side of genY_missplFuel_mid_imp. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:77:32--77:36
 73 | 
 74 | genY_missplFuel_aft_imp : (a, b : Type) -> {_ : Fuel} -> Gen $ Y a b
 75 | genY_missplFuel_aft_imp = deriveGen
 76 | 
 77 | genY_missplFuel_mid_imp : (a : Type) -> {_ : Fuel} -> (b : Type) -> Gen $ Y a b
                                     ^^^^

Error: While processing right hand side of genY_missplFuel_aft_autoimpl_imp. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:80:67--80:71
 76 | 
 77 | genY_missplFuel_mid_imp : (a : Type) -> {_ : Fuel} -> (b : Type) -> Gen $ Y a b
 78 | genY_missplFuel_mid_imp = deriveGen
 79 | 
 80 | genY_missplFuel_aft_autoimpl_imp : Gen X => {_ : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                                        ^^^^

Error: While processing right hand side of genY_unnamed_imp_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:85:47--85:51
 81 | genY_missplFuel_aft_autoimpl_imp = deriveGen
 82 | 
 83 | --- Implicit fuel argument ---
 84 | 
 85 | genY_unnamed_imp_fuel : {_ : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                    ^^^^

Error: While processing right hand side of genY_named_imp_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:88:45--88:49
 84 | 
 85 | genY_unnamed_imp_fuel : {_ : Fuel} -> (a, b : Type) -> Gen $ Y a b
 86 | genY_unnamed_imp_fuel = deriveGen
 87 | 
 88 | genY_named_imp_fuel : {f : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                  ^^^^

Error: While processing right hand side of genY_autoimp_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:91:37--91:41
 87 | 
 88 | genY_named_imp_fuel : {f : Fuel} -> (a, b : Type) -> Gen $ Y a b
 89 | genY_named_imp_fuel = deriveGen
 90 | 
 91 | genY_autoimp_fuel : Fuel => (a, b : Type) -> Gen $ Y a b
                                          ^^^^

Error: While processing right hand side of genY_defaulted_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:94:60--94:64
 90 | 
 91 | genY_autoimp_fuel : Fuel => (a, b : Type) -> Gen $ Y a b
 92 | genY_autoimp_fuel = deriveGen
 93 | 
 94 | genY_defaulted_fuel : {default Dry fuel : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                                 ^^^^

Error: While processing right hand side of genY_defaulted_fuel'. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:97:69--97:73
 93 | 
 94 | genY_defaulted_fuel : {default Dry fuel : Fuel} -> (a, b : Type) -> Gen $ Y a b
 95 | genY_defaulted_fuel = deriveGen
 96 | 
 97 | genY_defaulted_fuel' : {default (limit 120) fuel : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                                          ^^^^

Error: While processing right hand side of genY_exp_named_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:102:31--102:35
 098 | genY_defaulted_fuel' = deriveGen
 099 | 
 100 | --- Named explicit fuel ---
 101 | 
 102 | genY_exp_named_fuel : (fuel : Fuel) -> (a, b : Type) -> Gen $ Y a b
                                     ^^^^

Error: While processing right hand side of genY_with_unrelated. Error during reflection: Generated parameter is not used in the target type

ValidateInput:107:66--107:69
 103 | genY_exp_named_fuel = deriveGen
 104 | 
 105 | --- Unrelated stuff in the resulting dpair ---
 106 | 
 107 | genY_with_unrelated : Fuel -> (a : Type) -> Gen (b : Type ** n : Nat ** Y a b)
                                                                        ^^^

Error: While processing right hand side of genY_with_repeating_name_equityped. Error during reflection: All arguments of dependent pair under the resulting `Gen` are expected to be named

ValidateInput:110:60--110:95
 106 | 
 107 | genY_with_unrelated : Fuel -> (a : Type) -> Gen (b : Type ** n : Nat ** Y a b)
 108 | genY_with_unrelated = deriveGen
 109 | 
 110 | genY_with_repeating_name_equityped : Fuel -> (a : Type) -> Gen (b : Type ** b : Type ** Y a b)
                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing type of genY_with_repeating_name_difflytyped. When unifying Nat and Type.
Mismatch between: Nat and Type.

ValidateInput:113:94--113:95
 109 | 
 110 | genY_with_repeating_name_equityped : Fuel -> (a : Type) -> Gen (b : Type ** b : Type ** Y a b)
 111 | genY_with_repeating_name_equityped = deriveGen
 112 | 
 113 | genY_with_repeating_name_difflytyped : Fuel -> (a : Type) -> Gen (b : Type ** b : Nat ** Y a b)
                                                                                                    ^

Error: No type declaration for ValidateInput.genY_with_repeating_name_difflytyped.

ValidateInput:114:1--114:49
 110 | genY_with_repeating_name_equityped : Fuel -> (a : Type) -> Gen (b : Type ** b : Type ** Y a b)
 111 | genY_with_repeating_name_equityped = deriveGen
 112 | 
 113 | genY_with_repeating_name_difflytyped : Fuel -> (a : Type) -> Gen (b : Type ** b : Nat ** Y a b)
 114 | genY_with_repeating_name_difflytyped = deriveGen
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Did you mean: genY_with_repeating_name_equityped?
Error: While processing right hand side of genY_with_repeating_name_difflytyped'. When unifying Nat and Type.
Mismatch between: Nat and Type.

ValidateInput:116:79--116:87
 112 | 
 113 | genY_with_repeating_name_difflytyped : Fuel -> (a : Type) -> Gen (b : Type ** b : Nat ** Y a b)
 114 | genY_with_repeating_name_difflytyped = deriveGen
 115 | 
 116 | genY_with_repeating_name_difflytyped' : Fuel -> (a : Type) -> Gen (b : Nat ** b : Type ** Y a b)
                                                                                     ^^^^^^^^

Error: While processing right hand side of genOfGens. Error during reflection: Target type of a derived `Gen` cannot be a `deptycheck`'s `Gen`

ValidateInput:121:27--121:30
 117 | genY_with_repeating_name_difflytyped' = deriveGen
 118 | 
 119 | --- Gen of strange things ---
 120 | 
 121 | genOfGens : Fuel -> Gen $ Gen X
                                 ^^^

Error: While processing right hand side of genOfLazies. Error during reflection: Target type is not a simple name

ValidateInput:124:29--124:35
 120 | 
 121 | genOfGens : Fuel -> Gen $ Gen X
 122 | genOfGens = deriveGen
 123 | 
 124 | genOfLazies : Fuel -> Gen $ Lazy X
                                   ^^^^^^

Error: While processing right hand side of genOfInfs. Error during reflection: Target type is not a simple name

ValidateInput:127:27--127:32
 123 | 
 124 | genOfLazies : Fuel -> Gen $ Lazy X
 125 | genOfLazies = deriveGen
 126 | 
 127 | genOfInfs : Fuel -> Gen $ Inf X
                                 ^^^^^

Error: While processing right hand side of genOfDPair. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:130:25--130:27
 126 | 
 127 | genOfInfs : Fuel -> Gen $ Inf X
 128 | genOfInfs = deriveGen
 129 | 
 130 | genOfDPair : Fuel -> (a ** b ** Gen $ Y a b)
                               ^^

Error: While processing right hand side of genOfPair. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:133:39--133:51
 129 | 
 130 | genOfDPair : Fuel -> (a ** b ** Gen $ Y a b)
 131 | genOfDPair = deriveGen
 132 | 
 133 | genOfPair : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen (Y a b))
                                             ^^^^^^^^^^^^

Error: While processing right hand side of genOfPair'. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:136:40--136:52
 132 | 
 133 | genOfPair : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen (Y a b))
 134 | genOfPair = deriveGen
 135 | 
 136 | genOfPair' : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen X)
                                              ^^^^^^^^^^^^

Error: While processing right hand side of genOfFuns_pur. Error during reflection: Target type is not a simple name

ValidateInput:139:32--139:33
 135 | 
 136 | genOfPair' : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen X)
 137 | genOfPair' = deriveGen
 138 | 
 139 | genOfFuns_pur : Fuel -> Gen $ (a : Type) -> (b : Type) -> Y a b
                                      ^

Error: While processing right hand side of genOfFuns_pur0s. Error during reflection: Target type is not a simple name

ValidateInput:142:36--142:37
 138 | 
 139 | genOfFuns_pur : Fuel -> Gen $ (a : Type) -> (b : Type) -> Y a b
 140 | genOfFuns_pur = deriveGen
 141 | 
 142 | genOfFuns_pur0s : Fuel -> Gen $ (0 a : Type) -> (0 b : Type) -> Y a b
                                          ^

Error: While processing right hand side of genOfFuns_pur1s. Error during reflection: Target type is not a simple name

ValidateInput:145:36--145:37
 141 | 
 142 | genOfFuns_pur0s : Fuel -> Gen $ (0 a : Type) -> (0 b : Type) -> Y a b
 143 | genOfFuns_pur0s = deriveGen
 144 | 
 145 | genOfFuns_pur1s : Fuel -> Gen $ (1 a : Type) -> (1 b : Type) -> Y a b
                                          ^

Error: While processing right hand side of genOfFuns_ins_pair. Error during reflection: Target type is not a simple name

ValidateInput:148:42--148:43
 144 | 
 145 | genOfFuns_pur1s : Fuel -> Gen $ (1 a : Type) -> (1 b : Type) -> Y a b
 146 | genOfFuns_pur1s = deriveGen
 147 | 
 148 | genOfFuns_ins_pair : Fuel -> Gen (a ** ((b : Type) -> Y a b))
                                                ^

Error: While processing right hand side of genOfFuns_ins_pair0. Error during reflection: Target type is not a simple name

ValidateInput:151:45--151:46
 147 | 
 148 | genOfFuns_ins_pair : Fuel -> Gen (a ** ((b : Type) -> Y a b))
 149 | genOfFuns_ins_pair = deriveGen
 150 | 
 151 | genOfFuns_ins_pair0 : Fuel -> Gen (a ** ((0 b : Type) -> Y a b))
                                                   ^

Error: While processing right hand side of genOfFuns_ins_pair1. Error during reflection: Target type is not a simple name

ValidateInput:154:45--154:46
 150 | 
 151 | genOfFuns_ins_pair0 : Fuel -> Gen (a ** ((0 b : Type) -> Y a b))
 152 | genOfFuns_ins_pair0 = deriveGen
 153 | 
 154 | genOfFuns_ins_pair1 : Fuel -> Gen (a ** ((1 b : Type) -> Y a b))
                                                   ^

Error: While processing right hand side of genOfFuns_out_pair. Error during reflection: Target type is not a simple name

ValidateInput:157:37--157:38
 153 | 
 154 | genOfFuns_ins_pair1 : Fuel -> Gen (a ** ((1 b : Type) -> Y a b))
 155 | genOfFuns_ins_pair1 = deriveGen
 156 | 
 157 | genOfFuns_out_pair : Fuel -> Gen $ (b : Type) -> (a ** Y a b)
                                           ^

Error: While processing right hand side of genOfFuns_out_pair0. Error during reflection: Target type is not a simple name

ValidateInput:160:40--160:41
 156 | 
 157 | genOfFuns_out_pair : Fuel -> Gen $ (b : Type) -> (a ** Y a b)
 158 | genOfFuns_out_pair = deriveGen
 159 | 
 160 | genOfFuns_out_pair0 : Fuel -> Gen $ (0 b : Type) -> (a ** Y a b)
                                              ^

Error: While processing right hand side of genOfFuns_out_pair1. Error during reflection: Target type is not a simple name

ValidateInput:163:40--163:41
 159 | 
 160 | genOfFuns_out_pair0 : Fuel -> Gen $ (0 b : Type) -> (a ** Y a b)
 161 | genOfFuns_out_pair0 = deriveGen
 162 | 
 163 | genOfFuns_out_pair1 : Fuel -> Gen $ (1 b : Type) -> (a ** Y a b)
                                              ^

Error: While processing right hand side of genY_Int. Error during reflection: Argument is expected to be a variable name

ValidateInput:170:44--170:47
 166 | -- TODO to add more type that cannot be said as "pure types inside a `Gen`", if needed.
 167 | 
 168 | --- Non-variable arguments of the target type ---
 169 | 
 170 | genY_Int : Fuel -> (a : Type) -> Gen $ Y a Int
                                                  ^^^

Error: While processing right hand side of genY_given_zero_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:175:31--175:35
 171 | genY_Int = deriveGen
 172 | 
 173 | --- Unexpected zero and linear arguments ---
 174 | 
 175 | genY_given_zero_fuel : (0 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
                                     ^^^^

Error: While processing right hand side of genY_given_zero_arg1. Error during reflection: Erased arguments are not supported in generator signatures

ValidateInput:178:39--178:43
 174 | 
 175 | genY_given_zero_fuel : (0 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
 176 | genY_given_zero_fuel = deriveGen
 177 | 
 178 | genY_given_zero_arg1 : Fuel -> (0 a : Type) -> (b : Type) -> Gen $ Y a b
                                             ^^^^

Error: While processing right hand side of genY_given_zero_args. Error during reflection: Erased arguments are not supported in generator signatures

ValidateInput:181:42--181:46
 177 | 
 178 | genY_given_zero_arg1 : Fuel -> (0 a : Type) -> (b : Type) -> Gen $ Y a b
 179 | genY_given_zero_arg1 = deriveGen
 180 | 
 181 | genY_given_zero_args : Fuel -> (0 a, b : Type) -> Gen $ Y a b
                                                ^^^^

Error: While processing right hand side of genY_given_lin_fuel. Error during reflection: The first argument must be an explicit unnamed runtime one of type `Fuel`

ValidateInput:184:30--184:34
 180 | 
 181 | genY_given_zero_args : Fuel -> (0 a, b : Type) -> Gen $ Y a b
 182 | genY_given_zero_args = deriveGen
 183 | 
 184 | genY_given_lin_fuel : (1 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
                                    ^^^^

Error: While processing right hand side of genY_given_lin_arg1. Error during reflection: Linear arguments are not supported in generator signatures

ValidateInput:187:38--187:42
 183 | 
 184 | genY_given_lin_fuel : (1 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
 185 | genY_given_lin_fuel = deriveGen
 186 | 
 187 | genY_given_lin_arg1 : Fuel -> (1 a : Type) -> (b : Type) -> Gen $ Y a b
                                            ^^^^

Error: While processing right hand side of genY_given_lin_args. Error during reflection: Linear arguments are not supported in generator signatures

ValidateInput:190:41--190:45
 186 | 
 187 | genY_given_lin_arg1 : Fuel -> (1 a : Type) -> (b : Type) -> Gen $ Y a b
 188 | genY_given_lin_arg1 = deriveGen
 189 | 
 190 | genY_given_lin_args : Fuel -> (1 a, b : Type) -> Gen $ Y a b
                                               ^^^^

Error: While processing right hand side of genY_given_zero_lin_args. Error during reflection: Erased arguments are not supported in generator signatures

ValidateInput:193:43--193:47
 189 | 
 190 | genY_given_lin_args : Fuel -> (1 a, b : Type) -> Gen $ Y a b
 191 | genY_given_lin_args = deriveGen
 192 | 
 193 | genY_given_zero_lin_args : Fuel -> (0 a : Type) -> (1 b : Type) -> Gen $ Y a b
                                                 ^^^^

Error: While processing right hand side of genVoid. Error during reflection: No constructors found for the type `Builtin.Void`

ValidateInput:199:11--199:20
 195 | 
 196 | --- Gen for type with no constructors ---
 197 | 
 198 | genVoid : Fuel -> Gen Void
 199 | genVoid = deriveGen
                 ^^^^^^^^^

Error: While processing right hand side of genY_repX_hinted. Error during reflection: Repetition of a hinted external generator

ValidateInput:204:86--204:87
 200 | 
 201 | --- Repeating external gens ---
 202 | 
 203 | genY_repX_hinted : Fuel -> (a, b : Type) -> Gen $ Y a b
 204 | genY_repX_hinted = deriveGen {externalHintedGens = [ `(Fuel -> Gen X), `(Fuel -> Gen X) ]}
                                                                                            ^

Error: While processing right hand side of genY_repX_autoimpl. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:206:62--206:63
 202 | 
 203 | genY_repX_hinted : Fuel -> (a, b : Type) -> Gen $ Y a b
 204 | genY_repX_hinted = deriveGen {externalHintedGens = [ `(Fuel -> Gen X), `(Fuel -> Gen X) ]}
 205 | 
 206 | genY_repX_autoimpl : Fuel -> (Fuel -> Gen X) => (Fuel -> Gen X) => (a, b : Type) -> Gen $ Y a b
                                                                    ^

Error: While processing right hand side of genY_repX_both. Repetition of an external generator.

ValidateInput:210:18--210:27
 206 | genY_repX_autoimpl : Fuel -> (Fuel -> Gen X) => (Fuel -> Gen X) => (a, b : Type) -> Gen $ Y a b
 207 | genY_repX_autoimpl = deriveGen
 208 | 
 209 | genY_repX_both : Fuel -> (Fuel -> Gen X) => (a, b : Type) -> Gen $ Y a b
 210 | genY_repX_both = deriveGen {externalHintedGens = [ `(Fuel -> Gen X) ]}
                        ^^^^^^^^^

Error: While processing right hand side of genY_repX_both'. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:212:59--212:60
 208 | 
 209 | genY_repX_both : Fuel -> (Fuel -> Gen X) => (a, b : Type) -> Gen $ Y a b
 210 | genY_repX_both = deriveGen {externalHintedGens = [ `(Fuel -> Gen X) ]}
 211 | 
 212 | genY_repX_both' : Fuel -> (Fuel -> Gen X) => (Fuel -> Gen X) => (a, b : Type) -> Gen $ Y a b
                                                                 ^

Error: While processing right hand side of genY_nonex_hinted. Undefined name NonExistent. 

ValidateInput:218:69--218:80
 214 | 
 215 | --- Non-existent hinted gens ---
 216 | 
 217 | genY_nonex_hinted : Fuel -> (a, b : Type) -> Gen $ Y a b
 218 | genY_nonex_hinted = deriveGen {externalHintedGens = [ `(Fuel -> Gen NonExistent) ]}
                                                                           ^^^^^^^^^^^

Error: While processing right hand side of genY_nonex_hinted'. Undefined name NonExistent. 

ValidateInput:221:82--221:93
 217 | genY_nonex_hinted : Fuel -> (a, b : Type) -> Gen $ Y a b
 218 | genY_nonex_hinted = deriveGen {externalHintedGens = [ `(Fuel -> Gen NonExistent) ]}
 219 | 
 220 | genY_nonex_hinted' : Fuel -> (a, b : Type) -> Gen $ Y a b
 221 | genY_nonex_hinted' = deriveGen {externalHintedGens = [ `(forall a. Fuel -> Gen $ NonExistent a) ]}
                                                                                        ^^^^^^^^^^^

Error: While processing right hand side of genY_nonex_hinted''. Undefined name NonExistent. 

ValidateInput:224:73--224:84
 220 | genY_nonex_hinted' : Fuel -> (a, b : Type) -> Gen $ Y a b
 221 | genY_nonex_hinted' = deriveGen {externalHintedGens = [ `(forall a. Fuel -> Gen $ NonExistent a) ]}
 222 | 
 223 | genY_nonex_hinted'' : Fuel -> (a, b : Type) -> Gen $ Y a b
 224 | genY_nonex_hinted'' = deriveGen {externalHintedGens = [ `(Fuel -> Gen $ NonExistent a) ]}
                                                                               ^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_hinted_list. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:229:71--229:79
 225 | 
 226 | --- Non-gen externals ---
 227 | 
 228 | genY_nongen_hinted_list : Fuel -> (a, b : Type) -> Gen $ Y a b
 229 | genY_nongen_hinted_list = deriveGen {externalHintedGens = [ `(Fuel -> List Int) ]}
                                                                             ^^^^^^^^

Error: While processing right hand side of genY_nongen_hinted_pair. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:232:78--232:79
 228 | genY_nongen_hinted_list : Fuel -> (a, b : Type) -> Gen $ Y a b
 229 | genY_nongen_hinted_list = deriveGen {externalHintedGens = [ `(Fuel -> List Int) ]}
 230 | 
 231 | genY_nongen_hinted_pair : Fuel -> (a, b : Type) -> Gen $ Y a b
 232 | genY_nongen_hinted_pair = deriveGen {externalHintedGens = [ `( Fuel -> (Gen X, Gen X') ) ]}
                                                                                    ^

Error: While processing right hand side of genY_nongen_hinted_dpair. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:235:73--235:96
 231 | genY_nongen_hinted_pair : Fuel -> (a, b : Type) -> Gen $ Y a b
 232 | genY_nongen_hinted_pair = deriveGen {externalHintedGens = [ `( Fuel -> (Gen X, Gen X') ) ]}
 233 | 
 234 | genY_nongen_hinted_dpair : Fuel -> (a, b : Type) -> Gen $ Y a b
 235 | genY_nongen_hinted_dpair = deriveGen {externalHintedGens = [ `( Fuel -> (a ** b ** Gen $ Y a b) ) ]}
                                                                               ^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_list. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:237:46--237:54
 233 | 
 234 | genY_nongen_hinted_dpair : Fuel -> (a, b : Type) -> Gen $ Y a b
 235 | genY_nongen_hinted_dpair = deriveGen {externalHintedGens = [ `( Fuel -> (a ** b ** Gen $ Y a b) ) ]}
 236 | 
 237 | genY_nongen_autoimpl_list : Fuel -> (Fuel -> List Int) => (a, b : Type) -> Gen $ Y a b
                                                    ^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_pair. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:240:38--240:52
 236 | 
 237 | genY_nongen_autoimpl_list : Fuel -> (Fuel -> List Int) => (a, b : Type) -> Gen $ Y a b
 238 | genY_nongen_autoimpl_list = deriveGen
 239 | 
 240 | genY_nongen_autoimpl_pair : Fuel -> (Fuel -> Gen X, Fuel -> Gen X') => (a, b : Type) -> Gen $ Y a b
                                            ^^^^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_dpair. Error during reflection: The result type must be a `deptycheck`'s `Gen` applied to a type

ValidateInput:243:50--243:52
 239 | 
 240 | genY_nongen_autoimpl_pair : Fuel -> (Fuel -> Gen X, Fuel -> Gen X') => (a, b : Type) -> Gen $ Y a b
 241 | genY_nongen_autoimpl_pair = deriveGen
 242 | 
 243 | genY_nongen_autoimpl_dpair : Fuel -> (Fuel -> (a ** b ** Gen $ Y a b)) => (a, b : Type) -> Gen $ Y a b
                                                        ^^

Error: While processing right hand side of genY_hinted_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:249:58--249:63
 245 | 
 246 | --- Externals with no fuel ---
 247 | 
 248 | genY_hinted_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 249 | genY_hinted_nofuel = deriveGen {externalHintedGens = [ `(Gen X) ]}
                                                                ^^^^^

Error: While processing right hand side of genY_nongen_hinted_list_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:252:70--252:78
 248 | genY_hinted_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 249 | genY_hinted_nofuel = deriveGen {externalHintedGens = [ `(Gen X) ]}
 250 | 
 251 | genY_nongen_hinted_list_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 252 | genY_nongen_hinted_list_nofuel = deriveGen {externalHintedGens = [ `(List Int) ]}
                                                                            ^^^^^^^^

Error: While processing right hand side of genY_nongen_hinted_pair_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:255:77--255:78
 251 | genY_nongen_hinted_list_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 252 | genY_nongen_hinted_list_nofuel = deriveGen {externalHintedGens = [ `(List Int) ]}
 253 | 
 254 | genY_nongen_hinted_pair_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 255 | genY_nongen_hinted_pair_nofuel = deriveGen {externalHintedGens = [ `( (Gen X, Gen X') ) ]}
                                                                                   ^

Error: While processing right hand side of genY_nongen_hinted_dpair_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:258:72--258:95
 254 | genY_nongen_hinted_pair_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 255 | genY_nongen_hinted_pair_nofuel = deriveGen {externalHintedGens = [ `( (Gen X, Gen X') ) ]}
 256 | 
 257 | genY_nongen_hinted_dpair_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 258 | genY_nongen_hinted_dpair_nofuel = deriveGen {externalHintedGens = [ `( (a ** b ** Gen $ Y a b) ) ]}
                                                                              ^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_list_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:260:44--260:52
 256 | 
 257 | genY_nongen_hinted_dpair_nofuel : Fuel -> (a, b : Type) -> Gen $ Y a b
 258 | genY_nongen_hinted_dpair_nofuel = deriveGen {externalHintedGens = [ `( (a ** b ** Gen $ Y a b) ) ]}
 259 | 
 260 | genY_nongen_autoimpl_list_nofuel : Fuel -> List Int => (a, b : Type) -> Gen $ Y a b
                                                  ^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_pair_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:263:45--263:51
 259 | 
 260 | genY_nongen_autoimpl_list_nofuel : Fuel -> List Int => (a, b : Type) -> Gen $ Y a b
 261 | genY_nongen_autoimpl_list_nofuel = deriveGen
 262 | 
 263 | genY_nongen_autoimpl_pair_nofuel : Fuel -> (Gen X, Gen X') => (a, b : Type) -> Gen $ Y a b
                                                   ^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_dpair_nofuel. Error during reflection: No arguments in the signature, at least a fuel argument must be present

ValidateInput:266:48--266:50
 262 | 
 263 | genY_nongen_autoimpl_pair_nofuel : Fuel -> (Gen X, Gen X') => (a, b : Type) -> Gen $ Y a b
 264 | genY_nongen_autoimpl_pair_nofuel = deriveGen
 265 | 
 266 | genY_nongen_autoimpl_dpair_nofuel : Fuel -> (a ** b ** Gen $ Y a b) => (a, b : Type) -> Gen $ Y a b
                                                      ^^

Error: While processing right hand side of genY_autoimpl_in_autoimpl. Error during reflection: Auto-implicit argument should not contain its own auto-implicit arguments

ValidateInput:271:102--271:105
 267 | genY_nongen_autoimpl_dpair_nofuel = deriveGen
 268 | 
 269 | --- Auto-implicits are present inside auto-implicits ---
 270 | 
 271 | genY_autoimpl_in_autoimpl : Fuel -> (Fuel -> (Fuel -> (a, b : Type) -> Gen $ Y a b) => (a : Type) -> Gen (b ** Y a b)) => Gen (a ** b ** Y a b)
                                                                                                            ^^^

Error: While processing right hand side of genY_autoimpl_in_hinted. Error during reflection: Hinted argument should not contain its own auto-implicit arguments

ValidateInput:275:127--275:130
 271 | genY_autoimpl_in_autoimpl : Fuel -> (Fuel -> (Fuel -> (a, b : Type) -> Gen $ Y a b) => (a : Type) -> Gen (b ** Y a b)) => Gen (a ** b ** Y a b)
 272 | genY_autoimpl_in_autoimpl = deriveGen
 273 | 
 274 | genY_autoimpl_in_hinted : Fuel -> Gen (a ** b ** Y a b)
 275 | genY_autoimpl_in_hinted = deriveGen {externalHintedGens = [ `(Fuel -> (Fuel -> (a, b : Type) -> Gen $ Y a b) => (a : Type) -> Gen (b ** Y a b)) ]}
                                                                                                                                     ^^^

Error: While processing right hand side of genY_unused_argument. Error during reflection: Given parameter is not used in the target type

ValidateInput:283:54--283:57
 279 | -- TODO to add if it is needed
 280 | 
 281 | --- Not all arguments are used ---
 282 | 
 283 | genY_unused_argument : Fuel -> (a, b : Type) -> (c : Nat) -> Gen $ Y a b
                                                            ^^^

